[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptvc"
version = "0.1.0"
description = "Git for your prompts. Version, diff, rollback, and ship prompts like code."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Animesh", email = "dr.animeshpro@gmail.com" }]
keywords = ["llm", "prompt", "version-control", "cli", "genai", "promptops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
yaml = ["pyyaml>=6.0"]
s3 = ["boto3>=1.26.0"]

[project.scripts]
promptvc = "promptvc.cli:app"

[project.urls]
Homepage = "https://github.com/ANIMESHIOLOGY/prompt-version-control"
Repository = "https://github.com/ANIMESHIOLOGY/prompt-version-control"
Issues = "https://github.com/ANIMESHIOLOGY/prompt-version-control/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
